# quickpdf

./: README.md  pyproject.toml
.github/workflows/: pythonpublish.yml
src/quick_pdf/: merge.py
tests/: test_quick_pdf.py
