[tool.poetry]
name = "quick_pdf"
version = "0.1.1"
description = "CLI for quick PDF handling"
authors = ["Vibhu Agarwal <vibhu4agarwal@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Vibhu-Agarwal/quickpdf"
repository = "https://github.com/Vibhu-Agarwal/quickpdf"
keywords = ["PDF"]

[tool.poetry.dependencies]
python = "^3.8"
PyPDF2 = "^1.26.0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"

[tool.poetry.scripts]
quickpdf_merge = "quick_pdf.merge:merge_pdf"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
